--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 h1 {
-  @apply mb-14 text-center font-title text-6xl text-secondary;
+  @apply mb-12 text-center font-title text-5xl text-secondary lg:text-6xl;
 }
 
 h2 {
-  @apply mb-4 font-title text-4xl;
+  @apply mb-4 font-title text-3xl lg:text-4xl;
 }
 
 p {
